fix typo in package.json

--- a/tip-calculator/package.json
+++ b/tip-calculator/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lenniecottrell.github.io/FM-tip-calculator"
+  "homepage": "https://lenniecottrell.github.io/FM-tip-calculator",
   "name": "tip-calculator",
   "version": "0.1.0",
   "private": true,
